--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-minimal
-title: "Daisy Icari's Portfolio"
+title: "Daisy Icardi's Portfolio"
+description: "Hello, I am Daisy, a Senior Data Analyst and Junior Data Scientist from Italy"
