--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: "Daisy Icardi's Portfolio"
 description: "Hello, I am Daisy, a Senior Data Analyst and Junior Data Scientist from Italy"
+author: "Daisy Icardi"
