--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Daisy Icardi's Portfolio
 description: Hello, I am Daisy, a Senior Data Analyst and Junior Data Scientist from Italy
 author: Daisy Icardi
-theme: jekyll-theme-minimal
+theme: jekyll-theme-minima
 social:
   github: https://github.com/daisy-icardi
   linkedin: https://www.linkedin.com/in/daisy-icardi-6b3893268/
