--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ theme: minimal
 social:
   github: https://github.com/daisy-icardi
   linkedin: https://www.linkedin.com/in/daisy-icardi-6b3893268/
-baseurl: /daisy-icardi
+baseurl: ""
